OO-354: enhance the pom.xml to run the unit tests on Oracle, update the TESTING.README.LATEST with tips about Oracle